--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>JavaScript编程入门</h1>
+      <h1>cuimiao的世界</h1>
     </div>
   </div>
   <div class="container">
@@ -24,12 +24,12 @@
         <div class="panel-body">
           <li class="list-group-item">
             <a href="https://xugy0926.github.io/getting-started-with-javascript/">
-              新生大学JS编程入门项目[getting-started-with-javascript]
+              JavaScript学习天地
             </a>
           </li>
           <li class="list-group-item">
             <a href="https://github.com/xugy0926/words-from-the-heart">
-              新生大学JS编程入门心里话[getting-started-with-javascript]
+              cuimiao学习总结
             </a>
           </li>
         </div>
